Moved Frontend into designated folder